[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "acb_orm"
version = "v0.0.1"
description = "ORM for Bulletin Builder database and its methods"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies = [
    "mongoengine>=0.29.1",
    "pymongo>=4.15.0",
    "dnspython>=2.8.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.9",
    "typing_extensions==4.15.0",
]
[[project.authors]]
name = "victor-993"
email = "v.hernandez@cgiar.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/CIAT-DAPA/acb_orm"
Download = "https://github.com/CIAT-DAPA/acb_orm"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src",]